# rcm

./: .gitignore  README.md  example-config.yml  pyproject.toml  setup.cfg
rcm/: find_min_chimera.py  run_experiment.py
