[metadata]
name = rcm
description = Railway Conflict Management using D-Wave
long_description = file: README.md
long_description_content_type = text/markdown
author = K. Domino, M. Koniorczyk, K. Krawiec, K. Jałowiecki, S. Deffner, B. Gardas,
author_email = dexter2206@gmail.com
license = Apache-2.0
url = https://github.com/iitis/rcm
classifiers =
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    dimod >= 0.10.0
    dimodmock >= 1.0.0
    dwave-system >= 1.12.0
    dwave-networkx >= 0.8.11
    numpy >= 1.19.4
    PyYAML >= 5.3.1
    pandas >= 1.1.4
    tqdm >= 4.62.3

[options.entry_points]
console_scripts =
    rcm-find-min-chimera-size = rcm.find_min_chimera:main
    rcm-run-experiment = rcm.run_experiment:main
